<resources>
    <string name="app_name">ToDo App</string>

    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Enter your Note&#8230;</string>
    <string name="priority_string">Priority Level</string>

    <string name="high_priority">VERY HIGH</string>
    <string name="med_priority">MEDIUM</string>
    <string name="low_priority">LOW</string>

    <string name="add_button">ADD</string>
    <string name="update_button">UPDATE NOTE</string>
</resources>
